# advent-of-code-2023

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.fleet/: run.json
.github/workflows/: python-checks.yml
aoc23/: p01.py  p02.py  p03.py  p04.py  p05.py  p06.py  p07.py  p08.py  p09.py  p10.py  p11.py  p12.py  p13.py  p14.py  p15.py  p16.py  utils.py
tests/: test_p01.py  test_p02.py  test_p03.py  test_p04.py  test_p05.py  test_p06.py  test_p07.py  test_p08.py  test_p09.py  test_p10.py  test_p11.py  test_p12.py  test_p13.py  test_p14.py  test_p15.py  test_p16.py  test_performance.py
