[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = "Having winter fun with Advent of Code 2023 ☃️"
authors = ["Andrey Vlasovskikh <andrey.vlasovskikh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyinstrument = "^4.6.1"
plotext = "^5.2.8"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
